# amazingCal

./: .gitignore  .prettierrc  Cargo.toml  Makefile  README.md  docker-compose.yaml  nginx.conf  package-lock.json  package.json  render.yaml  shell.nix
backend/: .env.local.example  Cargo.toml
backend/src/: main.rs
backend/src/core/: calendar.rs  init_db.rs  jwt_authentication.rs  mod.rs
backend/src/core/calendar/: create_calendar.rs  create_event.rs  delete_calendar.rs  delete_event.rs  get_calendars.rs  get_events.rs  get_user_data.rs  mod.rs  parse_calendar_data.rs  shared.rs  update_calendar.rs  update_event.rs
backend/src/core/security/: mod.rs  validate_request.rs
backend/src/routes/: get_user_data.rs  hello.rs  mod.rs
backend/src/routes/create/: calendar.rs  event.rs
backend/src/routes/delete/: calendar.rs  event.rs
backend/src/routes/get/: user_data.rs
backend/src/routes/update/: calendar.rs  event.rs
backend/src/services/: database.rs
frontend/: .PUBLIC_SUPABASE_URL.example  Cargo.toml  Dockerfile  index.html  package.json
frontend/app/: globals.css  page.tsx
frontend/app/auth/confirm/: route.ts
frontend/app/calendar/: calendar.tsx  page.tsx
frontend/app/components/: button.tsx  calendarView.tsx  dropDown.tsx  inputField.tsx  link.tsx  modal.tsx  status.tsx
frontend/app/components/modals/: createCalendar.tsx  createEvent.tsx  editEvent.tsx
frontend/app/components/views/: monthView.tsx  weekView.tsx
frontend/app/core/: calendar.ts  eventManager.ts
frontend/app/error/: page.tsx
frontend/app/login/: actions.ts  layout.tsx  page.tsx
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/components/calendar/: mod.rs  month_view.rs  view_switcher.rs
frontend/src/components/main/: button.rs  check_box.rs  dropdown.rs  input_field.rs  link.rs  material_symbols.rs  mod.rs  right_click_menu.rs  status.rs
frontend/src/core/: api.rs  auth.rs  calendar_data.rs  event_manager.rs  mod.rs  shared.rs  time.rs
frontend/src/js/: auth_handler.js
frontend/src/pages/: calendar.rs  home.rs  login.rs  mod.rs
frontend/utils/supabase/: middleware.ts
(+35 files in other folders)
