[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "postgres", "sqlite"] }

jsonwebtoken = "9"
dotenv = "0.15"
uuid = { version = "1.13.1", features = [ "v4", "fast-rng", "macro-diagnostics"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-trait = "0.1"

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"
