[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwasm = "0.5.0"

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["DomRect"] }

once_cell = "1.7.0"
regex = "1.5.4"

chrono = "0.4.40"
gloo = "0.5"

lazy_static = "1.4.0"

[lints.clippy]
needless_return = "allow"
needless_range_loop = "allow"

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

redundant_clone = "deny"
implicit_clone = "deny"
cloned_instead_of_copied = "deny"
